--- a/cf/sns.yaml
+++ b/cf/sns.yaml
@@ -15,6 +15,10 @@ Parameters:
     Default: default
     Description: The sandbox ID of the environment that this topic is created for.
 
+
+Mappings:
+  SNSTopicName: !Sub "work-results-${Environment}-${SandboxID}-v2"
+
 Conditions:
   isProd: !Equals [!Ref Environment, "production"]
   isDev: !Equals [!Ref Environment, "development"]
@@ -33,7 +37,7 @@ Resources:
     Type: AWS::SNS::Topic
     Properties:
       KmsMasterKeyId: "alias/aws/sns"
-      TopicName: !Sub "work-results-${Environment}-${SandboxID}-v2"
+      TopicName: !FindInMap SNSTopicName
   PipelineResultsSubscriptionV2:
     Type: 'AWS::SNS::Subscription'
     Properties:
@@ -84,4 +88,4 @@ Outputs:
     Description: The ARN of the SNS v2 topic
     Value: !Ref SNSTopicV2
     Export:
-      Name: !Sub '${SNSTopicV2.TopicName}::ARN'
+      Name: !FindInMap SNSTopicName
