--- a/cf/sns.yaml
+++ b/cf/sns.yaml
@@ -14,10 +14,6 @@ Parameters:
     Type: String
     Default: default
     Description: The sandbox ID of the environment that this topic is created for.
-  TopicName:
-    Type: String
-    Default: !Sub "work-results-${Environment}-${SandboxID}-v2"
-    Description: Name of the SNS topic
 
 Conditions:
   isProd: !Equals [!Ref Environment, "production"]
@@ -37,7 +33,7 @@ Resources:
     Type: AWS::SNS::Topic
     Properties:
       KmsMasterKeyId: "alias/aws/sns"
-      TopicName: !Sub "${TopicName}"
+      TopicName: !Sub "work-results-${Environment}-${SandboxID}-v2"
   PipelineResultsSubscriptionV2:
     Type: 'AWS::SNS::Subscription'
     Properties:
@@ -88,4 +84,4 @@ Outputs:
     Description: The ARN of the SNS v2 topic
     Value: !Ref SNSTopicV2
     Export:
-      Name: !Sub "${TopicName}"
+      Name: !Sub "work-results-${Environment}-${SandboxID}-v2::ARN"
