--- a/cf/sns.yaml
+++ b/cf/sns.yaml
@@ -84,4 +84,4 @@ Outputs:
     Description: The ARN of the SNS v2 topic
     Value: !Ref SNSTopicV2
     Export:
-      Name: !Sub "work-results-${Environment}-${SandboxID}-v2::ARN"
+      Name: !Sub "sns-work-results-${Environment}-${SandboxID}-v2::ARN"
