--- a/migrations/sql-migrations/package.json
+++ b/migrations/sql-migrations/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "dynamoToSql": "node dynamoToSql/run",
     "paramsHashToParams": "node 2023-01-17-migrate-params-hash-to-last-gem2s-params/run"
   },
   "author": "",
