Set cluster template to be encrypted

--- a/infra/config/cluster/cluster-template.yaml
+++ b/infra/config/cluster/cluster-template.yaml
@@ -33,6 +33,10 @@ managedNodeGroups:
     minSize: 2
     maxSize: 4
     volumeSize: 80
+    BlockDeviceMappings:
+      - DeviceName: "/dev/xvda"
+        Ebs:
+          Encrypted: 'true'
     iam:
       withAddonPolicies:
         ebs: true
