Set volumeEncrypted to true

--- a/infra/config/cluster/cluster-template.yaml
+++ b/infra/config/cluster/cluster-template.yaml
@@ -33,10 +33,7 @@ managedNodeGroups:
     minSize: 2
     maxSize: 4
     volumeSize: 80
-    BlockDeviceMappings:
-      - DeviceName: "/dev/xvda"
-        Ebs:
-          Encrypted: 'true'
+    volumeEncrypted: true
     iam:
       withAddonPolicies:
         ebs: true
