--- a/infra/cf-loadbalancer.yaml
+++ b/infra/cf-loadbalancer.yaml
@@ -26,6 +26,8 @@ Resources:
       LoadBalancerAttributes: 
         - Key: routing.http2.enabled
           Value: "true"
+        - Key: routing.http.drop_invalid_header_fields.enabled
+          Value: "true"
       Name: !Sub "k8s-${Environment}"
       Scheme: !If [isPublic, "internet-facing", "internal"]
       Subnets: 
