--- a/cf/sns-endpoint-lambda.yaml
+++ b/cf/sns-endpoint-lambda.yaml
@@ -77,9 +77,7 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       FunctionName: !Sub sns-endpoint-lambda-${Environment}-${SandboxID}
-      # Using 3.7 so that we can import requests directly from botocore. See https://stackoverflow.com/a/48495770/1940886
-      # Otherwise we'd have to upload the Lambda code and its dependencies to S3 and use the files from there.
-      Runtime: python3.7
+      Runtime: python3.9
       Role: !GetAtt SNSEndpointLambdaRole.Arn
       Handler: index.lambda_handler
       VpcConfig:
@@ -99,16 +97,13 @@ Resources:
                       ]]
       Code:
         ZipFile: |
-          from botocore.vendored import requests
+          import urllib.request
           import json
           import os
-          import sys
 
           def lambda_handler(event, context):
             print("EVENT: ", event)
             sns_message_payload = event["Records"][0]["Sns"]
-
-            print("*** python version", sys.version)
 
             message_body = json.loads(sns_message_payload["Message"])
 
@@ -149,13 +144,14 @@ Resources:
             print("[DATA PAYLOAD] ", json.dumps(data))
 
             try:
-                r = requests.post(url = url, data = json.dumps(data), headers = headers, verify=False, timeout=300)
-                print("[SUCCESS] ", r.content)
-                print("***********************")
-                return {
-                    'statusCode': 200,
-                    'body': {"alles": "gut"}
-                }
+                req = urllib.request.Request(url = url, data = json.dumps(data), headers = headers, unverifiable=True)
+                with urllib.request.openurl(req, timeout=300) as r:
+                  print("[SUCCESS] ", r.read())
+                  print("***********************")
+                  return {
+                      'statusCode': 200,
+                      'body': {"alles": "gut"}
+                  }
             except Exception as e:
                 print("[FAILURE] ", e)
                 print("***********************")
