--- a/cf/sns-endpoint-lambda.yaml
+++ b/cf/sns-endpoint-lambda.yaml
@@ -144,7 +144,7 @@ Resources:
             print("[DATA PAYLOAD] ", json.dumps(data))
 
             try:
-                req = urllib.request.Request(url = url, data = json.dumps(data), headers = headers, unverifiable=True)
+                req = urllib.request.Request(url = url, data = json.dumps(data).encode('utf-8'), headers = headers, unverifiable=True)
                 with urllib.request.urlopen(req, timeout=300) as r:
                   print("[SUCCESS] ", r.read())
                   print("***********************")
