--- a/infra/config/cluster/cluster-template.yaml
+++ b/infra/config/cluster/cluster-template.yaml
@@ -28,7 +28,7 @@ iam:
 # config for each of the Github environments under infra/config/cluster
 managedNodeGroups:
   - name: nodegroup-post-scaling-x86-v2
-    instanceType: r5.large
+    instanceType: r6i.xlarge
     desiredCapacity: 2
     minSize: 2
     maxSize: 4
