--- a/cf/sns.yaml
+++ b/cf/sns.yaml
@@ -28,6 +28,7 @@ Resources:
       FifoQueue: true
       QueueName: !If [isDev, "development-queue.fifo", !Sub "queue-job-${SandboxID}-${Environment}.fifo"]
       FifoThroughputLimit: "perMessageGroupId"
+      SqsManagedSseEnabled: true
 
   SNSTopicV2:
     Type: AWS::SNS::Topic
