--- a/infra/cf-loadbalancer.yaml
+++ b/infra/cf-loadbalancer.yaml
@@ -18,23 +18,29 @@ Parameters:
 Conditions:
   isPublic: !Equals [!Ref PublicFacing, "true"]
 
-Resources: 
+Resources:
   LoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
-    Properties: 
+    Properties:
       IpAddressType: ipv4
-      LoadBalancerAttributes: 
+      LoadBalancerAttributes:
         - Key: routing.http2.enabled
           Value: "true"
         - Key: routing.http.drop_invalid_header_fields.enabled
           Value: "true"
+        - Key: access_logs.s3.enabled
+          Value: "true"
+        - Key: access_logs.s3.bucket
+          Value: !Ref ALBLogsBucket
+        - Key: access_logs.s3.prefix
+          Value: ""
       Name: !Sub "k8s-${Environment}"
       Scheme: !If [isPublic, "internet-facing", "internal"]
-      Subnets: 
+      Subnets:
         Fn::Split:
           - ','
           - Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SubnetsPublic"
-      Tags: 
+      Tags:
         - Key: ingress.k8s.aws/resource
           Value: LoadBalancer
         - Key: ingress.k8s.aws/stack
@@ -43,6 +49,31 @@ Resources:
           Value: !Sub "biomage-${Environment}"
       Type: application
 
+  ALBLogsBucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: !Sub "biomage-alb-access-logs-${Environment}-${AWS::AccountId}"
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: True
+        BlockPublicPolicy: True
+        IgnorePublicAcls: True
+        RestrictPublicBuckets: True
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: 'aws:kms'
+            BucketKeyEnabled: true
+      VersioningConfiguration:
+        Status: Enabled
+      LifecycleConfiguration:
+        Rules:
+          - Id: BackupRetentionDays
+            Status: "Enabled"
+            ExpirationInDays: 90
+          - Id: PreserveThenDeleteNonCurrentVersion
+            Status: "Enabled"
+            NoncurrentVersionExpirationInDays: 7
+
 Outputs:
   CanonicalHostedZoneID:
     Description: The ID of the Amazon Route 53 hosted zone associated with the load balancer.
@@ -50,7 +81,7 @@ Outputs:
     Export:
       Name: !Sub 'k8s-${Environment}::CanonicalHostedZoneID'
   DNSName:
-    Description: The DNS name for the load balancer. 
+    Description: The DNS name for the load balancer.
     Value: !GetAtt LoadBalancer.DNSName
     Export:
       Name: !Sub 'k8s-${Environment}::DNSName'
