--- a/infra/cf-loadbalancer.yaml
+++ b/infra/cf-loadbalancer.yaml
@@ -33,6 +33,8 @@ Mappings:
 Resources:
   LoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    DependsOn:
+      - ALBLogsBucketPermission
     Properties:
       Name: !Sub "k8s-${Environment}"
       IpAddressType: ipv4
