Add v2 again in cluster template and v3 in custom

--- a/infra/config/cluster/trv/custom-cluster-config.yaml
+++ b/infra/config/cluster/trv/custom-cluster-config.yaml
@@ -17,6 +17,10 @@ managedNodeGroups:
     subnets:
       - dmz-us-east-2a
       - dmz-us-east-2b
+  - name: nodegroup-post-scaling-x86-v3
+    subnets:
+      - dmz-us-east-2a
+      - dmz-us-east-2b
 
 fargateProfiles:
   - name: worker-default
