--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -609,8 +609,8 @@ jobs:
   deploy-monitoring:
     name: Setup logging and monitoring
     runs-on: ubuntu-20.04
-    needs: [set-environments, check-secrets]
-    if: github.event.inputs.workflow_actions == 'deploy monitoring' || (github.event.inputs.workflow_actions == 'create and configure cluster' && needs.create-eks-cluster.result == 'success')
+    needs: [set-environments, check-secrets, configure-cluster]
+    if: always() && github.event.inputs.workflow_actions != 'configure cluster' && (needs.configure-cluster.result == 'success' || needs.configure-cluster.result == 'skipped')
     env:
       CLUSTER_ENV: ${{ matrix.environment-type }}
       API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
