--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -612,7 +612,7 @@ jobs:
     name: Setup logging and monitoring
     runs-on: ubuntu-20.04
     needs: [set-environments, check-secrets, create-eks-cluster, configure-cluster]
-    if: always() && github.event.inputs.workflow_actions != 'configure cluster' && (needs.configure-cluster.result == 'success' || needs.configure-cluster.result == 'skipped' && (needs.create-eks-cluster.result == 'success' || needs.create-eks-cluster.result == 'skipped')) 
+    if: always() && github.event.inputs.workflow_actions != 'configure cluster' && (needs.create-eks-cluster.result == 'success' || needs.create-eks-cluster.result == 'skipped' && (needs.configure-cluster.result == 'success' || needs.configure-cluster.result == 'skipped'))
     env:
       CLUSTER_ENV: ${{ matrix.environment-type }}
       API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
