--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -200,9 +200,12 @@ jobs:
         env:
           ENVIRONMENT_NAME: ${{ matrix.environment-name }}
 
+      - id: check-template-name
+        run: echo "${{ matrix.template }}"
+
       - id: deploy-template
         name: Deploy CloudFormation template
-        if: ${{ !contains(matrix.template, 'irsa-') && matrix.template != 'sns.yaml' }}
+        if: ${{ !contains(matrix.template, 'irsa-') && matrix.template != 'sns' }}
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           parameter-overrides: "Environment=${{ matrix.environment-type }}"
@@ -213,7 +216,7 @@ jobs:
 
       - id: deploy-sns-template
         name: Deploy CloudFormation SNS template
-        if: ${{ matrix.template == 'sns.yaml' }}
+        if: ${{ matrix.template == 'sns' }}
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           parameter-overrides: "Environment=${{ matrix.environment-type }},UsingSelfSignedCert=${{ steps.using-self-signed-certificate.outputs.result }}"
