--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -200,12 +200,9 @@ jobs:
         env:
           ENVIRONMENT_NAME: ${{ matrix.environment-name }}
 
-      - id: check-template-name
-        run: echo "${{ matrix.template }}"
-
       - id: deploy-template
         name: Deploy CloudFormation template
-        if: ${{ !contains(matrix.template, 'irsa-') && matrix.template != 'sns' }}
+        if: ${{ !contains(matrix.template, 'irsa-') && matrix.template != 'cf/sns.yaml' }}
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           parameter-overrides: "Environment=${{ matrix.environment-type }}"
@@ -216,7 +213,7 @@ jobs:
 
       - id: deploy-sns-template
         name: Deploy CloudFormation SNS template
-        if: ${{ matrix.template == 'sns' }}
+        if: ${{ matrix.template == 'cf/sns.yaml' }}
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           parameter-overrides: "Environment=${{ matrix.environment-type }},UsingSelfSignedCert=${{ steps.using-self-signed-certificate.outputs.result }}"
