--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -189,7 +189,16 @@ jobs:
           exec &> >(tee /tmp/eksctl-$CLUSTER_ENV.log)
 
           eksctl create cluster -f /tmp/cluster-$CLUSTER_ENV.yaml
-          eksctl create addon --cluster biomage-$CLUSTER_ENV -f /tmp/cluster-$CLUSTER_ENV.yaml
+
+          echo "::set-output name=outcome::created"
+  
+      - id: update-addons-for-cluster
+        name: Attempt to create and update addons for cluster that already exists.
+        continue-on-error: true
+        run: |-
+          exec &> >(tee /tmp/eksctl-$CLUSTER_ENV.log)
+
+          eksctl create addon -f /tmp/cluster-$CLUSTER_ENV.yaml
 
           echo "::set-output name=outcome::created"
 
