--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -193,12 +193,14 @@ jobs:
           echo "::set-output name=outcome::created"
   
       - id: update-addons-for-cluster
-        name: Attempt to create and update addons for cluster that already exists.
+        name: Attempt to create addons for cluster.
         continue-on-error: true
         run: |-
           exec &> >(tee /tmp/eksctl-$CLUSTER_ENV.log)
 
           eksctl create addon -f /tmp/cluster-$CLUSTER_ENV.yaml
+
+          echo "::set-output name=outcome::created"
 
       - id: check-for-failure
         name: Check for reason of failure if cluster creation failed.
